--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,10 @@
 
     <repositories>
         <repository>
+            <id>nickapi</id>
+            <url>https://haoshoku.xyz:8081/repository/default/</url>
+        </repository>
+        <repository>
             <id>mojang</id>
             <url>https://libraries.minecraft.net/</url>
         </repository>
@@ -87,6 +91,13 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.10.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>xyz.haoshoku.nick</groupId>
+            <artifactId>nickapi</artifactId>
+            <version>7.6</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Mojang Authlib (for GameProfile and Property) -->
